--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <!-- Form starts -->
     <header>
-      <div class="centerh1">
-        <img src="assets/images/logo-mark.svg" alt="" />
+      <div class="center">
+        <img src="assets/images/logo-mark.svg" alt="" width="30px" />
         <h1>Coding Conf</h1>
       </div>
     </header>
@@ -41,8 +41,12 @@
             value=""
             accept="image/JPG, image/jpeg, image/png"
           />
-          <p>Drag and drop or click to upload</p>
-          <p><i></i> Upload your photo (JPG or PNG, max size: 500KB).</p>
+          <img src="assets/images/icon-upload.svg" alt="upload" />
+          <p>imgDrag and drop or click to upload</p>
+          <p>
+            <img src="assets/images/icon-info.svg" alt="icon-info" /> Upload
+            your photo (JPG or PNG, max size: 500KB).
+          </p>
         </div>
       </section>
 
